argocd/hiae/prd/manifests/apps/shared-api-contracts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shared-api-contracts
  name: shared-api-contracts
  namespace: apps-shared-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-api-contracts
  template:
    metadata:
      labels:
        app: shared-api-contracts
    spec:
      volumes:
      - name: shared-api-contracts
        configMap:
          name: shared-api-contracts
      containers:
      - image: 264221247403.dkr.ecr.sa-east-1.amazonaws.com/shared-api-contracts:55063a
        imagePullPolicy: IfNotPresent
        name: shared-api-contracts-app
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: shared-api-contracts
          mountPath: /etc/configmap
          readOnly: true
        envFrom:
        - secretRef:
            name: shared-api-contracts
            optional: true
        env:
        - name: DB_CA_CERT_PATH
          value: /etc/configmap/ca-certificate.pem
