argocd/hiae/prd/manifests/apps/shared-api-contracts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer-prod-shared-api-contracts-apps
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2023-12-10T00:44:05Z"
  generation: 2
  name: shared-api-contracts-apps
  namespace: apps-shared-api
  resourceVersion: "216651975"
  uid: 1d4b49eb-16a1-4be9-af8d-d5c80eaa9ae8
spec:
  rules:
  - host: contracts-api.hoobox.one
    http:
      paths:
      - backend:
          service:
            name: shared-api-contracts-apps
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - contracts-api.hoobox.one
    secretName: contracts-api-hoobox-one-tls
status:
  loadBalancer:
    ingress:
    - hostname: a9decaed647ed4fa7bd2dd616a00e46b-1650260671.sa-east-1.elb.amazonaws.com
